--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,16 @@
 cmake_minimum_required(VERSION 2.8.9)
 project(Robot-Tests)
 
+# set the include dir for helper classes 
 set(YARP_HELPERS_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
+
+# set the output plugin directory to collect all the shared libraries 
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
+
 
 # Build example? 
 add_subdirectory(example)
 
 # Build camera tests 
 add_subdirectory(src/camera)
-
 
