orgenizing test cases and updating doc

--- a/suits/contexts/icubSim/left_camera.ini
+++ b/suits/contexts/icubSim/left_camera.ini
@@ -1,5 +1,8 @@
 name "Test Left Camera"
 description "Check camera exist and streams output" 
 portname /${robotname}/cam/left
+times 1
+frequency 30
+tolerance 5
 
 
