--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(YARP_HELPERS_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 
 # set the output plugin directory to collect all the shared libraries 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
-
+set(CMAKE_SHARED_MODULE_PREFIX "")
 
 # Build example? 
 add_subdirectory(example)
