--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,7 @@ add_subdirectory(src/motor-tests)
 
 # Build force sensor tests
 add_subdirectory(src/ftsensor-tests)
+
+# Build force sensor tests
+add_subdirectory(src/positionDirect)
+
