--- a/suits/contexts/icub/robinterface_stream.ini
+++ b/suits/contexts/icub/robinterface_stream.ini
@@ -7,13 +7,20 @@ time 2 // check every port for <time> seconds.
 /${robotname}/head/stateExt:o            100             5
 /${robotname}/left_arm/state:o           100             5
 /${robotname}/left_arm/stateExt:o        100             5
+/${robotname}/left_arm/analog:o          100             5 
+/${robotname}/left_hand/analog:o         100             5
 /${robotname}/left_leg/state:o           100             5
 /${robotname}/left_leg/stateExt:o        100             5
+/${robotname}/left_leg/analog:o          100             5
+/${robotname}/left_foot/analog:o         100             5
 /${robotname}/right_arm/state:o          100             5
 /${robotname}/right_arm/stateExt:o       100             5
+/${robotname}/right_arm/analog:o         100             5
+/${robotname}/right_hand/analog:o        100             5
 /${robotname}/right_leg/state:o          100             5
 /${robotname}/right_leg/stateExt:o       100             5
-/${robotname}/skinManager/skin_events:o  50              5
+/${robotname}/right_leg/analog:o         100             5
+/${robotname}/right_foot/analog:o        100             5
 /${robotname}/torso/state:o              100             5
 /${robotname}/torso/stateExt:o           100             5
 
