moved yarp fixture support to RTF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,13 @@
 cmake_minimum_required(VERSION 2.8.9)
 project(iCub-Tests)
 
-# set the include dir for helper classes
-set(YARP_HELPERS_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
+# find a version of RTF higher then 1.0.1
+# and with yarp support enabled
+find_package(RTF 1.0.1 COMPONENTS YARP REQUIRED)
 
 # set the output plugin directory to collect all the shared libraries
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
 set(CMAKE_SHARED_MODULE_PREFIX "")
-
-# Build yarp fixture manager plugin
-add_subdirectory(src/fixture-ymanager)
 
 # Build example?
 add_subdirectory(example)
@@ -42,4 +40,3 @@ add_subdirectory(src/ftsensor-tests)
 
 # Build ports frequency tests
 add_subdirectory(src/ports-frequency)
-
