--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ before_script:
   - cd build 
   - cmake -DCMAKE_BUILD_TYPE=${TRAVIS_BUILD_TYPE} -DENABLE_MIDDLEWARE_PLUGINS:BOOL=ON -DENABLE_LUA_PLUGIN:BOOL=ON -DENABLE_WEB_LISTENER:BOOL=ON ..
   - make 
+  - sudo make install 
   - cd ../..
   
   # configure icub-tests
