--- a/suits/contexts/icubSim/right_camera.ini
+++ b/suits/contexts/icubSim/right_camera.ini
@@ -1,8 +1,8 @@
 name "Test Right Camera"
 description "Check camera exist and streams output" 
 portname /${robotname}/cam/right
-times 5
-frequency 30
-tolerance 5
+measure_time 5
+expected_frequency 60
+tolerance 10
 
 
