renamed variables and parameters for clearer understanding, modified default rate for simulator, increased slightly tolerance to avoid being too picky

--- a/suits/contexts/icubSim/camera_right.ini
+++ b/suits/contexts/icubSim/camera_right.ini
@@ -1,8 +1,8 @@
 name "Test Right Camera"
 description "Check camera exist and streams output" 
 portname /${robotname}/cam/right
-times 5
-frequency 30
-tolerance 5
+measure_time 5
+expected_frequency 60
+tolerance 10
 
 
