--- a/suits/contexts/icubSim/camera_left.ini
+++ b/suits/contexts/icubSim/camera_left.ini
@@ -1,8 +1,8 @@
 name "Test Left Camera"
 description "Check camera exist and streams output" 
 portname /${robotname}/cam/left
-times 5
-frequency 30
-tolerance 5
+measure_time 5
+expected_frequency 60
+tolerance 10
 
 
