--- a/src/opticalEncoders-drift/CMakeLists.txt
+++ b/src/opticalEncoders-drift/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 
 cmake_minimum_required(VERSION 2.8.9)
-set(PROJECTNAME opticalEncodersDrift)
+set(PROJECTNAME OpticalEncodersDrift)
 project(${PROJECTNAME})
 
 find_package(RTF)
