improved MotorStiction test fixed jointLimits test

--- a/suits/contexts/icub/motor_stiction_left_leg.ini
+++ b/suits/contexts/icub/motor_stiction_left_leg.ini
@@ -7,5 +7,5 @@ outputStep   (10 10 10 10 10 10)
 outputMax    (4000 4000 4000 4000 4000 4000)
 outputDelay  (1 1 1 1 1 1)
 threshold    (5 5 5 5 5 5)
-
+repeat     1
 
