--- a/suits/contexts/icub/motor_stiction_right_arm.ini
+++ b/suits/contexts/icub/motor_stiction_right_arm.ini
@@ -7,4 +7,4 @@ outputStep   (10 10 10 10 10)
 outputMax    (4000 4000 4000 4000 4000)
 outputDelay  (1 1 1 1 1)
 threshold    (5 5 5 5 5)
-
+repeat     1
