improved OpticalEncodersConsistency test

--- a/suits/contexts/icubSim/optical_encoders_consistency_right_leg.ini
+++ b/suits/contexts/icubSim/optical_encoders_consistency_right_leg.ini
@@ -7,4 +7,50 @@ max       (15 15 15 -15 15 -15)
 min       (0 0 0 0 0 0)
 cycles    10
 tolerance 1.0 
+matrix_size 6
+matrix   (   1.5    0    0    0    0    0  \
+             0      1    0    0    0    0  \
+             0      0    1    0    0    0  \
+             0      0    0    1    0    0  \
+	     0      0    0    0    1    0  \
+	     0      0    0    0    0    1  )
+			 
+plotString1  "gnuplot -e \" unset key; \
+             set multiplot layout 6,1 title 'JOINT POSITIONS vs MOTOR POSITIONS'; \
+ 			 plot 'plot_test1.txt' u 1 with lines,  'plot_test1.txt' u 7  with lines; \
+			 plot 'plot_test1.txt' u 2 with lines,  'plot_test1.txt' u 8  with lines; \
+			 plot 'plot_test1.txt' u 3 with lines,  'plot_test1.txt' u 9  with lines; \
+			 plot 'plot_test1.txt' u 4 with lines,  'plot_test1.txt' u 10 with lines; \
+			 plot 'plot_test1.txt' u 5 with lines,  'plot_test1.txt' u 11 with lines; \
+			 plot 'plot_test1.txt' u 6 with lines,  'plot_test1.txt' u 12 with lines; \
+			 unset multiplot; \" -persist "
 
+plotString2  "gnuplot -e \" unset key; \
+             set multiplot layout 6,1 title 'JOINT VELOCITES vs MOTOR VELOCITIES'; \
+ 			 plot 'plot_test2.txt' u 1 with lines,  'plot_test2.txt' u 7  with lines; \
+			 plot 'plot_test2.txt' u 2 with lines,  'plot_test2.txt' u 8  with lines; \
+			 plot 'plot_test2.txt' u 3 with lines,  'plot_test2.txt' u 9  with lines; \
+			 plot 'plot_test2.txt' u 4 with lines,  'plot_test2.txt' u 10 with lines; \
+			 plot 'plot_test1.txt' u 5 with lines,  'plot_test1.txt' u 11 with lines; \
+			 plot 'plot_test1.txt' u 6 with lines,  'plot_test1.txt' u 12 with lines; \
+			 unset multiplot; \" -persist "
+			 
+plotString3  "gnuplot -e \" unset key; \
+             set multiplot layout 6,1 title 'JOINT POSITIONS(DERIVED) vs JOINT SPEED'; \
+ 			 plot 'plot_test3.txt' u 1 with lines,  'plot_test3.txt' u 7  with lines; \
+			 plot 'plot_test3.txt' u 2 with lines,  'plot_test3.txt' u 8  with lines; \
+			 plot 'plot_test3.txt' u 3 with lines,  'plot_test3.txt' u 9  with lines; \
+			 plot 'plot_test3.txt' u 4 with lines,  'plot_test3.txt' u 10 with lines; \
+			 plot 'plot_test3.txt' u 5 with lines,  'plot_test3.txt' u 11 with lines; \
+			 plot 'plot_test3.txt' u 6 with lines,  'plot_test3.txt' u 12 with lines; \
+			 unset multiplot; \" -persist "
+			 
+plotString4  "gnuplot -e \" unset key; \
+             set multiplot layout 6,1 title 'JOINT POSITIONS(DERIVED) vs MOTOR SPEED'; \
+ 			 plot 'plot_test4.txt' u 1 with lines,  'plot_test4.txt' u 7  with lines; \
+			 plot 'plot_test4.txt' u 2 with lines,  'plot_test4.txt' u 8  with lines; \
+			 plot 'plot_test4.txt' u 3 with lines,  'plot_test4.txt' u 9  with lines; \
+			 plot 'plot_test4.txt' u 4 with lines,  'plot_test4.txt' u 10 with lines; \
+			 plot 'plot_test3.txt' u 5 with lines,  'plot_test3.txt' u 11 with lines; \
+			 plot 'plot_test3.txt' u 6 with lines,  'plot_test3.txt' u 12 with lines; \
+			 unset multiplot; \" -persist "
