fixed typo in the plots

--- a/suits/contexts/icubSim/optical_encoders_consistency_left_leg.ini
+++ b/suits/contexts/icubSim/optical_encoders_consistency_left_leg.ini
@@ -46,7 +46,7 @@ plotString3  "gnuplot -e \" unset key; \
 			 unset multiplot; \" -persist "
 			 
 plotString4  "gnuplot -e \" unset key; \
-             set multiplot layout 6,1 title 'JOINT POSITIONS(DERIVED) vs MOTOR SPEED'; \
+             set multiplot layout 6,1 title 'MOTOR POSITIONS(DERIVED) vs MOTOR SPEED'; \
  			 plot 'plot_test4.txt' u 1 with lines,  'plot_test4.txt' u 7  with lines; \
 			 plot 'plot_test4.txt' u 2 with lines,  'plot_test4.txt' u 8  with lines; \
 			 plot 'plot_test4.txt' u 3 with lines,  'plot_test4.txt' u 9  with lines; \
