--- a/suits/contexts/icubGazeboSim/optical_encoders_consistency_right_arm.ini
+++ b/suits/contexts/icubGazeboSim/optical_encoders_consistency_right_arm.ini
@@ -38,7 +38,7 @@ plotString3  "gnuplot -e \" unset key; \
 			 unset multiplot; \" -persist "
 			 
 plotString4  "gnuplot -e \" unset key; \
-             set multiplot layout 4,1 title 'JOINT POSITIONS(DERIVED) vs MOTOR SPEED'; \
+             set multiplot layout 4,1 title 'MOTOR POSITIONS(DERIVED) vs MOTOR SPEED'; \
  			 plot 'plot_test4.txt' u 1 with lines,  'plot_test4.txt' u 5 with lines; \
 			 plot 'plot_test4.txt' u 2 with lines,  'plot_test4.txt' u 6 with lines; \
 			 plot 'plot_test4.txt' u 3 with lines,  'plot_test4.txt' u 7 with lines; \
