fixing missing tests name in tests config files. adding a test suite for jenkins

--- a/suits/contexts/icubSim/camera_left.ini
+++ b/suits/contexts/icubSim/camera_left.ini
@@ -1,4 +1,4 @@
-name "Test Left Camera"
+name "CameraTest Left"
 description "Check camera exist and streams output" 
 portname /${robotname}/cam/left
 measure_time 5
