--- a/suits/contexts/icubSim/camera_right.ini
+++ b/suits/contexts/icubSim/camera_right.ini
@@ -1,4 +1,4 @@
-name "Test Right Camera"
+name "CameraTest Right"
 description "Check camera exist and streams output" 
 portname /${robotname}/cam/right
 measure_time 5
