--- a/suits/contexts/icubSim/test_motortest_left_arm.ini
+++ b/suits/contexts/icubSim/test_motortest_left_arm.ini
@@ -1,4 +1,4 @@
-name "Test Left Arm"
+name "MotorTest Left Arm"
 description "Set each joint position to 15.0 degrees" 
 portname /${robotname}/left_arm
 
