updated config files of motorEncodersConsistency test for headV3

--- a/suits/contexts/icubV3/motorEncodersConsistency_head4J.ini
+++ b/suits/contexts/icubV3/motorEncodersConsistency_head4J.ini
@@ -1,17 +1,17 @@
 robot     ${robotname}
 part      head
-joints    (0   1   2   3   4   5)
-home      (0   0   0   0   0   0)
-speed     (20  20  20  20  20  20)
-max       (10  10  10  10  10  20)
-min       (-10 -10 -10 -10 -10  10)
+joints    (0   1   2   3   )
+home      (0   0   0   0   )
+speed     (20  20  20  20  )
+max       (0  10  10  10  )
+min       (0  -10 -10 -10 )
 cycles    10
 tolerance 1.0
-matrix_size 6
-matrix   (               1                         0                         0                         0 \
-                    -1.625                     1.625                         0                         0 \
-                    -1.625                     1.625                     1.625                         0 \
-                         0                         0                         0                         1 )
+matrix_size 4
+matrix   (    -1        -1         0         0 \
+               1        -1         0         0 \
+               0         0         1         0 \
+               0         0         0         1 )
 			 
 plotString1  "gnuplot -e \" unset key; \
              set multiplot layout 4,1 title 'JOINT POSITIONS vs MOTOR POSITIONS'; \
