added motorEncodersSignCheck test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ add_subdirectory(src/torqueControl-consistency)
 # Build optical encoder tests
 add_subdirectory(src/motorEncoders-consistency)
 add_subdirectory(src/opticalEncoders-drift)
+add_subdirectory(src/motorEncodersSignCheck)
 
 # Build model consistency check
 if(ICUB_TESTS_USES_ICUB_MAIN)
