--- a/suits/contexts/icub/joint_limits_torso.ini
+++ b/suits/contexts/icub/joint_limits_torso.ini
@@ -4,5 +4,6 @@ joints    (0 1 2)
 home      (0 0 0)
 speed     (20 20 20)
 outputLimitPercent (30 30 30)
+outOfBoundPosition ( 2  2  2)
 tolerance 0.2 
 
