--- a/suits/contexts/icubGazeboSim/joint_limits_left_arm.ini
+++ b/suits/contexts/icubGazeboSim/joint_limits_left_arm.ini
@@ -4,5 +4,6 @@ joints    (0 1 2 3 4)
 home      (-30 30 10 45 0)
 speed     (20 20 20 20 20)
 outputLimitPercent (30 30 30 30 30)
+outOfBoundPosition ( 2  2  2  2  2)
 tolerance 0.2 
 
