--- a/suits/contexts/icubSim/joint_limits_head.ini
+++ b/suits/contexts/icubSim/joint_limits_head.ini
@@ -5,5 +5,6 @@ joints    (0 1 2 3 4 5)
 home      (0 0 0 0 0 0)
 speed     (20 20 20 20 20 20)
 outputLimitPercent (30 30 30 30 30 30)
+outOfBoundPosition ( 2  2  2  2  2  2)
 tolerance 0.2 
 
