--- a/suits/contexts/icubV3/joint_limits_face.ini
+++ b/suits/contexts/icubV3/joint_limits_face.ini
@@ -4,5 +4,6 @@ joints    (2 3 4 5)
 home      (0 0 0 0)
 speed     (15 15 15 15)
 outputLimitPercent (90 90 90 90)
+outOfBoundPosition ( 2  2  2  2)
 tolerance 0.2 
 
