Updated configuration files of iCubV3

--- a/suits/contexts/icubV3/controlModes_face.ini
+++ b/suits/contexts/icubV3/controlModes_face.ini
@@ -1,5 +1,5 @@
 robot     ${robotname}
-name      ControlModes_head
+name      ControlModes_face
 part      head
-joints    (0 1 2 3 4 5)
+joints    (0 1 2 4 5)
 zero      0.0
