--- a/suits/contexts/icubV3/motorEncodersConsistency_headEyes.ini
+++ b/suits/contexts/icubV3/motorEncodersConsistency_headEyes.ini
@@ -1,18 +1,17 @@
 robot     ${robotname}
-part      face
-name      motorEncConsistency_face
-joints    ( 1  2   4   5 )
-home      ( 0  0   0   14 )
-speed     (30  30  30 30 )
-max       (0   10   10  24 )
-min       (-20 -10  -10  4 )
+part      head
+joints    (2   3   4   5)
+home      (0   0   0   20  )
+speed     (20  20  20  20  )
+max       (10  10  5   10)
+min       (-10 -10 -5  40)
 cycles    10
 tolerance 1.0
 matrix_size 4
-matrix   (     1         0         0    0     \
-               0         1         0    0     \
-               0         0         1    0
-               0         0         0    1    )
+matrix   (     1         0         0         0 \
+               0         1         0         0 \
+               0         0         1         -1 \
+               0         0         1         1 )
 			 
 plotString1  "gnuplot -e \" unset key; \
              set multiplot layout 4,1 title 'JOINT POSITIONS vs MOTOR POSITIONS'; \
@@ -24,10 +23,10 @@ plotString1  "gnuplot -e \" unset key; \
 
 plotString2  "gnuplot -e \" unset key; \
              set multiplot layout 4,1 title 'JOINT VELOCITES vs MOTOR VELOCITIES'; \
- 			 plot 'plot_test1.txt' u 1 with lines,  'plot_test1.txt' u 5 with lines; \
-			 plot 'plot_test1.txt' u 2 with lines,  'plot_test1.txt' u 6 with lines; \
-			 plot 'plot_test1.txt' u 3 with lines,  'plot_test1.txt' u 7 with lines; \
-			 plot 'plot_test1.txt' u 4 with lines,  'plot_test1.txt' u 8 with lines; \
+ 			 plot 'plot_test2.txt' u 1 with lines,  'plot_test2.txt' u 5 with lines; \
+			 plot 'plot_test2.txt' u 2 with lines,  'plot_test2.txt' u 6 with lines; \
+			 plot 'plot_test2.txt' u 3 with lines,  'plot_test2.txt' u 7 with lines; \
+			 plot 'plot_test2.txt' u 4 with lines,  'plot_test2.txt' u 8 with lines; \
 			 unset multiplot; \" -persist "
 			 
 plotString3  "gnuplot -e \" unset key; \
