--- a/suits/contexts/icubV3/motorEncodersSignCheck_face.ini
+++ b/suits/contexts/icubV3/motorEncodersSignCheck_face.ini
@@ -1,10 +1,11 @@
 robot     ${robotname}
-name      motEncSignCheckonFace
+name      motEncSignCheck_Face
 part      face
 joints    (1 2  4 5)
 home      (-5 0  0 14)
 speed     ( 70 20  20 20)
-outputStep   ( 50 50  50 50 )
-outputMax    ( 3000 3000 3000 3000)
-outputDelay  (1 1 1 )
+pwmStep   ( 50 50  50 50 )
+pwmMax    ( 3000 3000 3000 3000)
+pwmStart  (0 0 0 0)
+
 
