--- a/suits/contexts/icubV3/motorStiction_head.ini
+++ b/suits/contexts/icubV3/motorStiction_head.ini
@@ -1,5 +1,6 @@
 robot     ${robotname}
 part      head
+name      motorStiction_head
 joints    (0 1 2 3 4 5)
 home      (0 0 0 0 0 20)
 speed     (20 20 20 20 20 20)
