--- a/suits/contexts/icubV3/motortest_face.ini
+++ b/suits/contexts/icubV3/motortest_face.ini
@@ -1,11 +1,11 @@
-name "Motor Test Head" 
-portname /${robotname}/head
+name "Motor test face" 
+portname /${robotname}/face
 
 joints 6
 
-target   -13.0   -13.0   -20.0   -12.0   -25.0    12.0 
-min       0.1     0.1     0.1     0.1     0.1     0.1  
-max       0.1     0.1     0.1     0.1     0.1     0.1  
+target    10.0   -13.0   -20.0   -12.0   -25.0    12.0 
+min       3.0     3.0     3.0     3.0     3.0     3.0  
+max       3.0     3.0     3.0     3.0     3.0     3.0  
 refvel    20.0    20.0    20.0    20.0    20.0    20.0 
 timeout   10.0    10.0    10.0    10.0    10.0    10.0
 
