--- a/suits/contexts/icubV3/openLoopConsistency_face.ini
+++ b/suits/contexts/icubV3/openLoopConsistency_face.ini
@@ -1,7 +1,8 @@
 robot     ${robotname}
+name      openLoopConsistency_face
 part      face
-joints    (2 4 5)
-zero      (0 0 0)
+joints    (0  1  2  4 5)
+home      (10 0  0  0 10)
 
 
 
