--- a/suits/contexts/icubV3/openLoopConsistency_head.ini
+++ b/suits/contexts/icubV3/openLoopConsistency_head.ini
@@ -1,7 +1,9 @@
 robot     ${robotname}
+name      openLoopConsistency_head
 part      head
-joints    (0 1 2 3 4 5)
-zero      (0 0 0 0 0 0)
+#only for not cuopled joint
+joints    (2 3)
+home      (0 0)
 
 
 
