--- a/suits/contexts/icubV3/positionDirect.ini
+++ b/suits/contexts/icubV3/positionDirect.ini
@@ -1,10 +1,10 @@
 robot     ${robotname}
 part      head
-joints    (2)
+joints    (0 1 2)
 zero      0 
 frequency 0.4 
 amplitude 1.0 
 cycles    10
 tolerance 1.0 
 sampleTime 0.010 
-cmdMode 0
+cmdMode 2
