--- a/suits/contexts/icubV3/joint_limits_face.ini
+++ b/suits/contexts/icubV3/joint_limits_face.ini
@@ -1,9 +1,10 @@
 robot     ${robotname}
+name      jointLimits_face
 part      face
-joints    (2 3 4 5)
-home      (0 0 0 0)
-speed     (15 15 15 15)
-outputLimitPercent (90 90 90 90)
-outOfBoundPosition ( 2  2  2  2)
-tolerance 0.2 
+joints    (0 1 2 4 5)
+home      (0 0 0 0 0)
+speed     (15 15 15 15 15)
+outputLimitPercent (50 90 90 90 90 90)
+tolerance 1.2 
+
 
