--- a/suits/contexts/icubV3/joint_limits_head.ini
+++ b/suits/contexts/icubV3/joint_limits_head.ini
@@ -1,9 +1,10 @@
 robot     ${robotname}
+name      jointLimits_head
 part      head
-joints    (2 3 4 5)
-home      (0 0 0 0 0 0)
-speed     (12 12 12 12)
-outputLimitPercent (90 90 90 90)
-outOfBoundPosition ( 2  2  2  2)
-tolerance 0.2 
+joints    (0   1   2   3   4   5)
+home      (0   0   0   0   0   0)
+speed     (12  12  12  12  12  12)
+outputLimitPercent (90 90 90 90 90 90)
+tolerance 1.2 
+
 
