--- a/suits/contexts/icubV3/motorEncodersSignCheck_head.ini
+++ b/suits/contexts/icubV3/motorEncodersSignCheck_head.ini
@@ -1,11 +1,13 @@
 robot     ${robotname}
+name      motEncSignCheck_Head
 part      head
-joints    (2 3)
-home      (0 0 )
-speed     (20 20 )
-outputStep   (50 50 )
-outputMax    (3000 3000 )
-outputDelay  (1 1)
-threshold    (5 5)
-repeat     1
+joints    (0 1 2 3 4 5)
+home      (0 0 0 0 0 20)
+speed     (20 20 20 20 20 20)
+pwmStep   (50 50 50 50 50 50)
+pwmMax    (3000 3000 3000 3000 3000 3000)
+pwmStart  (0 0 0 145 0 0)
+commandDelay  (1 1 1 1 1 1)
+Posthreshold  (5 5 5 5 5 5)
+
 
