--- a/suits/contexts/icubV3/motorStiction_face.ini
+++ b/suits/contexts/icubV3/motorStiction_face.ini
@@ -1,11 +1,12 @@
 robot     ${robotname}
+name     motorStiction_face
 part      face
-joints    (2 4 5)
-home      (0 0 14)
-speed     (20 20 20)
-outputStep   (10 10 10)
-outputMax    (3000 3000 3000)
-outputDelay  (1 1 1)
-threshold    (5 5 5)
+joints    (0  1   2  4  5)
+home      (10 0   0  0  14)
+speed     (20 20 20  20 20)
+outputStep   (10 10 10 10 10 10)
+outputMax    (3000 3000 3000 3000 3000)
+outputDelay  (1 1 1 1 1)
+threshold    (5 5 5 5 5)
 repeat     1
 
