updated config files of optical_encoders_consistency and optical_encoders_drift tests

--- a/suits/contexts/icub/optical_encoders_consistency_right_leg.ini
+++ b/suits/contexts/icub/optical_encoders_consistency_right_leg.ini
@@ -2,7 +2,7 @@ robot     ${robotname}
 part      right_leg
 joints    (0 1 2 3 4 5)
 home      (0 10 0 0 0 0)
-speed     (20 20 20 20)
+speed     (20 20 20 20 20 20)
 max       (15 20 15 -15 15 -15)
 min       (0 10 0 0 0 0)
 cycles    10
