Added face ports to robotInterfaceStream config

--- a/suits/contexts/icub/robinterface_stream.ini
+++ b/suits/contexts/icub/robinterface_stream.ini
@@ -5,6 +5,8 @@ time 2 // check every port for <time> seconds.
 //        port-name                  frequency(Hrz)  tolerance
 /${robotname}/head/state:o               100             5      
 /${robotname}/head/stateExt:o            100             5
+/${robotname}/face/state:o               100             5      
+/${robotname}/face/stateExt:o            100             5
 /${robotname}/left_arm/state:o           100             5
 /${robotname}/left_arm/stateExt:o        100             5
 /${robotname}/left_arm/analog:o          100             5 
