--- a/suits/contexts/icubEth/joint_limits_face.ini
+++ b/suits/contexts/icubEth/joint_limits_face.ini
@@ -5,6 +5,7 @@ joints    (0 1 2 4 5)
 home      (0 0 0 0 0)
 speed     (15 15 15 15 15)
 outputLimitPercent (50 90 90 90 90 90)
-tolerance 1.2 
+outOfBoundPosition ( 2  2  2  2  2  2)
+tolerance 1.0
 
 
