--- a/suits/contexts/icub/motorControlInterf_head.ini
+++ b/suits/contexts/icub/motorControlInterf_head.ini
@@ -1,4 +1,4 @@
-name "Motor control interface" 
+name "Motor control interf head" 
 robot "icub"
 part "head"
 joints    (0        1      2        3       4       5)
