reorganized test suits for streaming, ftsensors and camera

--- a/suits/contexts/icub/robinterface_stream.ini
+++ b/suits/contexts/icub/robinterface_stream.ini
@@ -25,4 +25,6 @@ time 2 // check every port for <time> seconds.
 /${robotname}/right_foot/analog:o        100             5
 /${robotname}/torso/state:o              100             5
 /${robotname}/torso/stateExt:o           100             5
+/${robotname}/cam/left                    30             5      
+/${robotname}/cam/right                   30             5    
 
