deleted useless *.ini file in icubV3 context.
Added calib camera ports stream checks in robotInterface_stream.ini

--- a/suits/contexts/icub/robinterface_stream.ini
+++ b/suits/contexts/icub/robinterface_stream.ini
@@ -27,4 +27,6 @@ time 2 // check every port for <time> seconds.
 /${robotname}/torso/stateExt:o           100             5
 /${robotname}/cam/left                    30             5      
 /${robotname}/cam/right                   30             5    
-
+/icub/camcalib/right/out                  30             5      
+/icub/camcalib/left/out                   30             5      
+/pf3dTracker/video:o                      30             5
