Used octave script to check consistency between joint and motor encoders

--- a/suits/contexts/icubV3/motorEncodersConsistency_head4J.ini
+++ b/suits/contexts/icubV3/motorEncodersConsistency_head4J.ini
@@ -7,41 +7,11 @@ max       (5  11  10  10  )
 min       (-5 -11 -10 -10 )
 cycles    10
 tolerance 1.0
+plot_enabled 0
 matrix_size 4
 matrix   (    -1        -1         0         0 \
                1        -1         0         0 \
                0         0         1         0 \
                0         0         0         1 )
 			 
-plotString1  "gnuplot -e \" unset key; \
-             set multiplot layout 4,1 title 'JOINT POSITIONS vs MOTOR POSITIONS'; \
- 			 plot 'plot_test1.txt' u 1 with lines,  'plot_test1.txt' u 5 with lines; \
-			 plot 'plot_test1.txt' u 2 with lines,  'plot_test1.txt' u 6 with lines; \
-			 plot 'plot_test1.txt' u 3 with lines,  'plot_test1.txt' u 7 with lines; \
-			 plot 'plot_test1.txt' u 4 with lines,  'plot_test1.txt' u 8 with lines; \
-			 unset multiplot; \" -persist "
-
-plotString2  "gnuplot -e \" unset key; \
-             set multiplot layout 4,1 title 'JOINT VELOCITES vs MOTOR VELOCITIES'; \
- 			 plot 'plot_test2.txt' u 1 with lines,  'plot_test2.txt' u 5 with lines; \
-			 plot 'plot_test2.txt' u 2 with lines,  'plot_test2.txt' u 6 with lines; \
-			 plot 'plot_test2.txt' u 3 with lines,  'plot_test2.txt' u 7 with lines; \
-			 plot 'plot_test2.txt' u 4 with lines,  'plot_test2.txt' u 8 with lines; \
-			 unset multiplot; \" -persist "
-			 
-plotString3  "gnuplot -e \" unset key; \
-             set multiplot layout 4,1 title 'JOINT POSITIONS(DERIVED) vs JOINT SPEED'; \
- 			 plot 'plot_test3.txt' u 1 with lines,  'plot_test3.txt' u 5 with lines; \
-			 plot 'plot_test3.txt' u 2 with lines,  'plot_test3.txt' u 6 with lines; \
-			 plot 'plot_test3.txt' u 3 with lines,  'plot_test3.txt' u 7 with lines; \
-			 plot 'plot_test3.txt' u 4 with lines,  'plot_test3.txt' u 8 with lines; \
-			 unset multiplot; \" -persist "
-			 
-plotString4  "gnuplot -e \" unset key; \
-             set multiplot layout 4,1 title 'MOTOR POSITIONS(DERIVED) vs MOTOR SPEED'; \
- 			 plot 'plot_test4.txt' u 1 with lines,  'plot_test4.txt' u 5 with lines; \
-			 plot 'plot_test4.txt' u 2 with lines,  'plot_test4.txt' u 6 with lines; \
-			 plot 'plot_test4.txt' u 3 with lines,  'plot_test4.txt' u 7 with lines; \
-			 plot 'plot_test4.txt' u 4 with lines,  'plot_test4.txt' u 8 with lines; \
-			 unset multiplot; \" -persist "
 
