Added name param in some ini files

--- a/suits/contexts/icub/motorEncoderConsistency_right_leg.ini
+++ b/suits/contexts/icub/motorEncoderConsistency_right_leg.ini
@@ -1,5 +1,6 @@
 robot     ${robotname}
 part      right_leg
+name      motorEncConsistency_rightLeg
 joints    (0 1 2 3 4 5)
 home      (0 10 0 0 0 0)
 speed     (20 20 20 20 20 20)
