--- a/suits/contexts/icub/motortest_right_arm.ini
+++ b/suits/contexts/icub/motortest_right_arm.ini
@@ -1,4 +1,4 @@
-name "Test Right Arm"
+name MotorTest_rightArm
 description "Set each joint position to 15.0 degrees" 
 portname /${robotname}/right_arm
 
