--- a/suits/contexts/icub/motorEncoderConsistency_left_leg.ini
+++ b/suits/contexts/icub/motorEncoderConsistency_left_leg.ini
@@ -1,5 +1,6 @@
 robot     ${robotname}
 part      left_leg
+name      motorEncConsistency_leftLeg
 joints    (0 1 2 3 4 5)
 home      (0 10 0 0 0 0)
 speed     (20 20 20 20 20 20)
