--- a/suits/contexts/icub/motorEncoderConsistency_right_arm.ini
+++ b/suits/contexts/icub/motorEncoderConsistency_right_arm.ini
@@ -1,5 +1,6 @@
 robot     ${robotname}
 part      right_arm
+name      motorEncConsistency_rightArm
 joints    (0 1 2 3)
 home      (-30 30 10 45)
 speed     (20 20 20 20)
