--- a/suits/contexts/icub/motortest_left_arm.ini
+++ b/suits/contexts/icub/motortest_left_arm.ini
@@ -1,4 +1,4 @@
-name "Test Left Arm"
+name MotorTest_leftArm
 description "Set each joint position to 15.0 degrees" 
 portname /${robotname}/left_arm
 
