--- a/suits/contexts/icub/torque_stiffDampCheck.ini
+++ b/suits/contexts/icub/torque_stiffDampCheck.ini
@@ -1,9 +1,9 @@
-name "Stiff and dump test" 
+name "Stiff and damp test" 
 robot "icub"
 part "left_arm"
 joints    (1      2        3)
 home      (0.0      0.0    0.0 )
 stiffness (0.3     0.3     0.3 )
-dumping   (0.02    0.02    0.02)
+damping   (0.02    0.02    0.02)
 duration  3
 plot_enabled true
