Modified config files of stiffDampCheck test

--- a/suits/contexts/icub/torque_stiffDampCheck.ini
+++ b/suits/contexts/icub/torque_stiffDampCheck.ini
@@ -1,9 +1,9 @@
 name "Stiff and damp test" 
 robot "icub"
-part "left_arm"
-joints    (1      2        3)
-home      (0.0      0.0    0.0 )
-stiffness (0.3     0.3     0.3 )
-damping   (0.02    0.02    0.02)
-duration  3
+part "right_leg"
+joints    (4        5    )
+home      (0.0      0.0  )
+stiffness (0.3     0.3   )
+damping   (0.02    0.02   )
+duration  20
 plot_enabled true
