--- a/suits/contexts/icubGazeboSim/test.ini
+++ b/suits/contexts/icubGazeboSim/test.ini
@@ -4,7 +4,7 @@ comment "this is a wild bunch of tests"
 outfile iCubTestReport.xml
 
 [ENVIRONMENT]
-robotname icubGazeboSim
+robotname icubSim
 
 [TESTS]
 TestCamera right_camera.ini
