--- a/src/torqueControl-gravityConsistency/CMakeLists.txt
+++ b/src/torqueControl-gravityConsistency/CMakeLists.txt
@@ -10,8 +10,7 @@ cmake_minimum_required(VERSION 2.8.11)
 set(PROJECTNAME TorqueControlGravityConsistency)
 project(${PROJECTNAME})
 
-find_package(RTF)
-find_package(RTF COMPONENTS DLL)
+find_package(RTF 1.1 COMPONENTS DLL)
 find_package(YARP)
 find_package(yarpWholeBodyInterface REQUIRED)
 
@@ -24,7 +23,7 @@ add_library(${PROJECTNAME} MODULE TorqueControlGravityConsistency.h
                                   TorqueControlGravityConsistency.cpp)
 
 target_link_libraries(${PROJECTNAME} LINK_PUBLIC ${RTF_LIBRARIES}
-                                            ${YARP_LIBRARIES}
+                                            ${YARP_LIBRARIES} YARP::YARP_rtf
                                             ${yarpWholeBodyInterface_LIBRARIES})
 
 install(TARGETS ${PROJECTNAME}
