--- a/src/motorEncodersSignCheck/CMakeLists.txt
+++ b/src/motorEncodersSignCheck/CMakeLists.txt
@@ -6,12 +6,11 @@
 #
 
 
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.0)
 set(PROJECTNAME MotorEncodersSignCheck)
 project(${PROJECTNAME})
 
-find_package(RTF)
-find_package(RTF COMPONENTS DLL)
+find_package(RTF 1.1 COMPONENTS DLL)
 find_package(YARP)
 
 include_directories(${CMAKE_SOURCE_DIR}
@@ -21,7 +20,7 @@ include_directories(${CMAKE_SOURCE_DIR}
                     )
 
 link_libraries(${RTF_LIBRARIES}
-               ${YARP_LIBRARIES}
+               ${YARP_LIBRARIES} YARP::YARP_rtf
                YARP::YARP_manager)
 
 add_library(${PROJECTNAME} MODULE motorEncodersSignCheck.h
