--- a/src/torqueControl-consistency/CMakeLists.txt
+++ b/src/torqueControl-consistency/CMakeLists.txt
@@ -6,12 +6,11 @@
 #
 
 
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.0)
 set(PROJECTNAME TorqueControlConsistency)
 project(${PROJECTNAME})
 
-find_package(RTF)
-find_package(RTF COMPONENTS DLL)
+find_package(RTF 1.1 COMPONENTS DLL)
 find_package(YARP)
 
 include_directories(${CMAKE_SOURCE_DIR}
@@ -20,7 +19,7 @@ include_directories(${CMAKE_SOURCE_DIR}
                     ${YARP_HELPERS_INCLUDE_DIR})
 
 link_libraries(${RTF_LIBRARIES}
-               ${YARP_LIBRARIES})
+               ${YARP_LIBRARIES} YARP::YARP_rtf)
 
 add_library(${PROJECTNAME} MODULE TorqueControlConsistency.h
                                   TorqueControlConsistency.cpp)
