--- a/src/models-consistency/CMakeLists.txt
+++ b/src/models-consistency/CMakeLists.txt
@@ -30,10 +30,6 @@ include_directories(${CMAKE_SOURCE_DIR}
                     ${ICUB_INCLUDE_DIRS}
                     ${YARP_HELPERS_INCLUDE_DIR})
 
-# add required libraries
-link_libraries(${RTF_LIBRARIES}
-               ${YARP_LIBRARIES} YARP::YARP_rtf
-               iKin iDyn)
 
 # import math symbols from standard cmath
 add_definitions(-D_USE_MATH_DEFINES)
@@ -41,6 +37,10 @@ add_definitions(-D_USE_MATH_DEFINES)
 # add the source codes to build the plugin library
 add_library(${PROJECTNAME} MODULE iKiniDynConsistencyTest.h
                                   iKiniDynConsistencyTest.cpp)
+# add required libraries
+target_link_libraries(${PROJECTNAME} ${RTF_LIBRARIES}
+               ${YARP_LIBRARIES} YARP::YARP_rtf
+               iKin iDyn)
 
 # set the installation options
 install(TARGETS ${PROJECTNAME}
