--- a/src/gaze-control/simple-look/CMakeLists.txt
+++ b/src/gaze-control/simple-look/CMakeLists.txt
@@ -19,14 +19,15 @@ include_directories(${CMAKE_SOURCE_DIR}
                     ${YARP_INCLUDE_DIRS}
                     ${YARP_HELPERS_INCLUDE_DIR})
 
-# add required libraries
-link_libraries(${RTF_LIBRARIES} ${YARP_LIBRARIES} YARP::YARP_rtf)
-
 # import math symbols from standard cmath
 add_definitions(-D_USE_MATH_DEFINES)
 
 # add the source codes to build the plugin library
 add_library(${PROJECT_NAME} MODULE ${PROJECT_NAME}.h ${PROJECT_NAME}.cpp)
+
+# add required libraries
+target_link_libraries(${PROJECT_NAME} ${RTF_LIBRARIES} ${YARP_LIBRARIES} YARP::YARP_rtf)
+
 
 # set the installation options
 install(TARGETS ${PROJECT_NAME}
