--- a/src/jointLimits/CMakeLists.txt
+++ b/src/jointLimits/CMakeLists.txt
@@ -18,12 +18,12 @@ include_directories(${CMAKE_SOURCE_DIR}
                     ${YARP_INCLUDE_DIRS}
                     ${YARP_HELPERS_INCLUDE_DIR})
 
-link_libraries(${RTF_LIBRARIES}
-               ${YARP_LIBRARIES} YARP::YARP_rtf
-               YARP::YARP_manager)
-
 add_library(${PROJECTNAME} MODULE jointLimits.h
                                   jointLimits.cpp)
+target_link_libraries(${PROJECTNAME} ${RTF_LIBRARIES}
+                      ${YARP_LIBRARIES} YARP::YARP_rtf
+                      YARP::YARP_manager)
+
 install(TARGETS ${PROJECTNAME}
         EXPORT ${PROJECTNAME}
         COMPONENT runtime
