--- a/suits/contexts/icubEth/motorStiction_face.ini
+++ b/suits/contexts/icubEth/motorStiction_face.ini
@@ -4,8 +4,8 @@ part      face
 joints    (0  1   2  4  5)
 home      (10 0   0  0  14)
 speed     (20 20 20  20 20)
-outputStep   (10 10 10 10 10 10)
-outputMax    (3000 3000 3000 3000 3000)
+outputStep   (0.5 0.5 0.5 0.5 0.5)
+outputMax    (50  50  50  50  50)
 outputDelay  (1 1 1 1 1)
 threshold    (5 5 5 5 5)
 repeat     1
