--- a/suits/contexts/icubEth/joint_limits_left_forearm.ini
+++ b/suits/contexts/icubEth/joint_limits_left_forearm.ini
@@ -1,9 +1,9 @@
 robot     ${robotname}
 part      left_arm
-joints    ( 1       2       3       4       5       6       7       8       9       10 )
-home      (-15      0      35       25      20     20      20      20       20      20 )
-speed     ( 30     30       60      25      25      30      30      30      30      30 )
-outputLimitPercent (75 75 75 75 75 75 75 75 75 75 )
-outOfBoundPosition ( 3  3  3  3  3  3  3  3  3  3 )
-tolerance 2.0 
+joints            ( 4       5       6    )
+home              ( 0      0        0   )
+speed             ( 20     20       20   )
+outputLimitPercent (75     75       75   )
+outOfBoundPosition ( 2     2        2    )
+tolerance 1.5 
 
