--- a/suits/contexts/icubEth/joint_limits_right_arm.ini
+++ b/suits/contexts/icubEth/joint_limits_right_arm.ini
@@ -1,11 +1,11 @@
 robot     ${robotname}
 part      right_arm
-joints    (0 1 2 3)
-home      (-30 30 10 45 )
-speed     (10 10 10 10 )
-outputLimitPercent (95 95 85 85 )
-outOfBoundPosition ( 2 2  2  2)
-tolerance 1.5
+joints             (0    1    2    3    4    5    6)
+home               (-30  30   10   45   0    0    0  )
+speed              (10   10   10   10   20   20   20 )
+outputLimitPercent (95   95   85   85   75   75   75  )
+outOfBoundPosition ( 2   2    2    2    2    2    2)
+tolerance 1.5 
 
 
 
